[gd_scene load_steps=3 format=2]

[ext_resource path="res://addons/GDEditor/Scenes/DialogueGraph.gd" type="Script" id=1]
[ext_resource path="res://addons/GDEditor/Scenes/DGPopupMenu.gd" type="Script" id=2]

[node name="DialogueGraph" type="GraphEdit"]
margin_left = 226.0
margin_right = 1024.0
margin_bottom = 552.0
custom_constants/bezier_len_neg = -10
custom_constants/bezier_len_pos = -10
right_disconnects = true
snap_distance = 5
use_snap = false
minimap_enabled = false
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DGPopupMenu" type="PopupMenu" parent="."]
margin_right = 20.0
margin_bottom = 20.0
script = ExtResource( 2 )
